--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,63 @@
+/* COMMONS */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+.d-none{
+    display: none;
+}
+
+.d-block{
+    display: block;
+}
+
+.text-center{
+    text-align: center;
+}
+
+.uppercase{
+    text-transform: uppercase;
+}
+
+.mb-1{
+    margin-bottom: 1rem;
+}
+
+.mt-3{
+    margin-top: 3rem;
+}
+
+
+#main-container,
+#esplosione{
+    height: 100vh;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+    padding: 100px 0;
+}
+
+#main-container{
+    background-image: url('../img/prato.jpg');
+}
+
+#esplosione{
+    background-color: orange;
+}
+
+.container{
+    width: 80%;
+    margin: 0 auto;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 30px;
+}
+
+
+
+
+/* DEBUG */
+.debug .container{
+    height: 500px;
+}
