--- a/css/style.css
+++ b/css/style.css
@@ -29,12 +29,16 @@
     margin-bottom: 3rem;
 }
 
-.pt-1{
-    padding-top: 1rem;
+.mt-1{
+    margin-top: 1rem;
 }
 
 .mt-3{
     margin-top: 3rem;
+}
+
+.pt-1{
+    padding-top: 1rem;
 }
 
 body{
@@ -78,7 +82,9 @@ body{
     width: 50%;
 }
 
-#user-score{
+.score-container{
+    width: 80%;
+    margin: 0 auto;
     padding: 5px;
     background-color: darkred;
 }
